--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "<!-- Improved compatibility of back to top link: See: https://github.com/othneildrew/Best-README-Template/pull/73 --> <a name=\"readme-top\"></a> <!-- *** Thanks for checking out the Best-README-Template. If you have a suggestion *** that would make this better, please fork the repo and create a pull request *** or simply open an issue with the tag \"enhancement\". *** Don't forget to give the project a star! *** Thanks again! Now go create something AMAZING! :D -->",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy": "gh-pages -d src"
   },
   "repository": {
     "type": "git",
@@ -18,8 +18,9 @@
   },
   "homepage": "https://github.com/ferneynava/instagram-redesign-app#readme",
   "devDependencies": {
+    "gh-pages": "^5.0.0",
     "standard": "17.0.0"
-  }, 
+  },
   "eslintConfig": {
     "extends": "./node_modules/standard/eslintrc.json"
   }
